fixed simple list and added collapsable to list

--- a/src/renderer/src/screens/edit/styles.css
+++ b/src/renderer/src/screens/edit/styles.css
@@ -615,7 +615,8 @@ fieldset {
 
   & .object-dropzone,
   & .array-dropzone,
-  & .block-fields-container {
+  & .block-fields-container,
+  & .list-dropzone {
     min-height: 5rem;
     border: 1px dotted var(--border-color);
     border-radius: var(--default-radius);
